MSH-72-82: fix styles on safari browser

--- a/assets/component-cart.css
+++ b/assets/component-cart.css
@@ -450,7 +450,8 @@ cart-items {
 
 .image {
   width: 100%;
-  height: 100%;
+  height: min-content;
+  max-height: 125px;
   padding: 8px;
   border-right: 1px solid #d8d8d8;
   border-bottom: 1px solid #d8d8d8;
